pp2/samples/jon_badswitch1.out

*** Error line 3.
    case howdy: test; break;
         ^^^^^
*** syntax error

