pp2/samples/jon_badswitch1.decaf
void main() {
  switch (howdy) {
    case howdy: test; break;
  }
}
